--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/output.css">
 </head>
-<body>
+
+<body class="inter">
+    <header>
+        <nav class=" mx-auto max-w-110 flex flex-wrap justify-between py-4 px-5 text-white bg-[#412567] sm:max-w-400 sm:px-50">
+            
+            <h2 class="text-4xl font-extrabold">
+                Tech<span class="bg-clip-text text-transparent bg-gradient-to-r 
+                from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Wave</span>
+            </h2>
+
+
+            <ul class="hidden sm:flex sm:gap-x-8 sm:items-center">
+                <li><a class="decoration-none text-[16px] font-medium text-left" href="#">About</a></li>
+                <li><a class="decoration-none text-[16px] font-medium text-left" href="#">Episodes</a></li>
+                <li><a class="decoration-none text-[16px] font-medium text-left" href="#">Host</a></li>
+            </ul>
+
+            <button 
+            class="hidden sm:flex sm:gap-x-1 sm:items-center w-33 h-11 
+            px-4 py-3 border rounded-[10000px] text-center 
+            bg-gradient-to-r from-[#f7e93f] from-0% via-[#fb09b4] via-51% to-[#9100f8] to-100%
+            font-semibold text-[16px]">
+            Subscribe &rarr;</button>
+
+            <button class="text-white sm:hidden"><svg class="fill-current drop-shadow-[0_0_1px_white]"
+                    xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 50 50">
+                    <path
+                        d="M 3 9 A 1.0001 1.0001 0 1 0 3 11 L 47 11 A 1.0001 1.0001 0 1 0 47 9 L 3 9 z M 3 24 A 1.0001 1.0001 0 1 0 3 26 L 47 26 A 1.0001 1.0001 0 1 0 47 24 L 3 24 z M 3 39 A 1.0001 1.0001 0 1 0 3 41 L 47 41 A 1.0001 1.0001 0 1 0 47 39 L 3 39 z">
+                    </path>
+                </svg>
+            </button>
+
+        </nav>
+
+    </header>
 </body>
+
 </html>
