a portion of hero section is done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="src/output.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/src/output.css">
+
 </head>
 
 <body class="inter">
     <header>
-        <nav class=" mx-auto max-w-110 flex flex-wrap justify-between py-4 px-5 text-white bg-[#412567] sm:max-w-400 sm:px-50">
+        <nav class=" mx-auto max-w-110 flex flex-wrap justify-between py-4 px-5 text-white sm:max-w-400 sm:px-50">
             
             <h2 class="text-4xl font-extrabold">
                 Tech<span class="bg-clip-text text-transparent bg-gradient-to-r 
@@ -40,6 +42,19 @@
             </button>
 
         </nav>
+
+        <section class="hero">
+            <img class="circle" src="/assets/hero-circle.png" alt="">
+            <img class="mic" src="/assets/microphone.png" alt="">
+            <p class="badge">new</p>
+
+            <div class="hero-content">
+                <h2>TechWave</h2>
+                <p></p>
+
+            </div>
+
+        </section>
 
     </header>
 </body>
