--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="inter">
     <header>
         <nav class=" mx-auto max-w-110 flex flex-wrap justify-between py-4 px-5 text-white sm:max-w-400 sm:px-50">
-            
+
             <h2 class="text-4xl font-extrabold">
                 Tech<span class="bg-clip-text text-transparent bg-gradient-to-r 
                 from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Wave</span>
@@ -26,12 +26,11 @@
                 <li><a class="decoration-none text-[16px] font-medium text-left" href="#">Host</a></li>
             </ul>
 
-            <button 
-            class="hidden sm:flex sm:gap-x-1 sm:items-center w-33 h-11 
+            <button class="hidden sm:flex sm:gap-x-1 sm:items-center w-33 h-11 
             px-4 py-3 border rounded-[10000px] text-center 
             bg-gradient-to-r from-[#f7e93f] from-0% via-[#fb09b4] via-51% to-[#9100f8] to-100%
             font-semibold text-[16px]">
-            Subscribe &rarr;</button>
+                Subscribe &rarr;</button>
 
             <button class="text-white sm:hidden"><svg class="fill-current drop-shadow-[0_0_1px_white]"
                     xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 50 50">
@@ -44,19 +43,74 @@
         </nav>
 
         <section class="hero">
-            <img class="circle" src="/assets/hero-circle.png" alt="">
-            <img class="mic" src="/assets/microphone.png" alt="">
-            <p class="badge">new</p>
 
-            <div class="hero-content">
-                <h2>TechWave</h2>
-                <p></p>
+            <div class="container">
+                <div class="w-full">
+                    <img class="circle" src="/assets/hero-circle.png" alt="">
+                    <img class="mic" src="/assets/microphone.png" alt="">
+                    <p class="badge">new</p>
+                </div>
 
+                <div class="hero-content w-full ">
+                    <h2 class="font-extrabold text-[60px] text-center text-white">TechWave</h2>
+                    <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                </div>
+
+                <div class="btn-section  absolute flex">
+                    <button>Listen On Spotify</button>
+                    <button>Subscribe</button>
+                </div>
             </div>
+
+
+
+
+
+        </section>
+    </header>
+
+    <main>
+
+        <section class="podcast">
+            <div class="text-content">
+                <h3>About The Podcast</h3>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                    We break down complex topics into digestible insights, explore productivity strategies that actually
+                    work,
+                    and share stories of personal growth from industry leaders. <br/><br><br><br>
+
+                    Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+            </div>
+            <hr style="color:white;margin-bottom:80px;">
+
+            <div class="rating">
+
+                <div class="box">
+                    <h2>150k+</h2>
+                    <p>Monthly Listeneres</p>
+                </div>
+                <div class="box">
+                    <h2>200+</h2>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="box">
+                    <h2>4.9★</h2>
+                    <p>Average Rating</p>
+                </div>
+                <div class="box">
+                    <h2>50+</h2>
+                    <p>industry Experts</p>
+                </div>
+            </div>
+
 
         </section>
 
-    </header>
+        <div class="choose-techwave">
+            
+        </div>
+
+    </main>
 </body>
 
 </html>
