--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
                     We break down complex topics into digestible insights, explore productivity strategies that actually
                     work,
-                    and share stories of personal growth from industry leaders. <br/><br><br><br>
+                    and share stories of personal growth from industry leaders. <br /><br><br><br>
 
                     Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
             </div>
@@ -106,9 +106,53 @@
 
         </section>
 
-        <div class="choose-techwave">
-            
-        </div>
+        <section class="choose-techwave">
+            <h2>Why Choose TechWave</h2>
+
+            <div class="technology">
+                <div class="headphone grid-box">
+                    <img src="assets/headphone.png" alt="" style="margin-top:107px;">
+                    <h4>Premium Audio Quality</h4>
+                    <p style="margin-bottom:107px;">Experience crystal-clear sound with professional-grade recording
+                        equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+
+                <div class="mobile grid-box">
+                    <img src="assets/device.png" alt="">
+                    <h4>Mobile Friendly</h4>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+
+                </div>
+
+                <div class="mobile grid-box">
+                    <img src="assets/location.png" alt="">
+                    <h4>Global Community</h4>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+
+                </div>
+
+                <div class="mobile grid-box">
+                    <img src="assets/stroke.png" alt="">
+                    <h4>Exclusive Interviews</h4>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                        secures exclusive conversations you won't find anywhere else, diving deep into their journeys,
+                        failures, and success strategies.</p>
+
+                </div>
+
+                <div class="rich-resource grid-box">
+                    <img src="assets/resource.png" alt="">
+                    <h4>Rich Resources</h4>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+
+            </div>
+
+
+
+        </section>
 
     </main>
 </body>
