problems with tailwind

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/src/output.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 </head>
 
 <body class="inter">
@@ -154,6 +156,89 @@
 
         </section>
 
+        <section class="feature flex flex-col gap-30" style="background-color:#1A0B2E;">
+
+            <div class="episodes max-w-300 mx-auto flex flex-col gap-10 ">
+                <h2 class="font-bold text-6xl text-white text-center">Featured Episodes</h2>
+
+                <div class="videos grid grid-cols-3 gap-8">
+
+                    <div class="video max-w-[380px]">
+                        <iframe width="380" height="214" class="rounded-t-2xl"
+                            src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=spFwI8GIZSDSELVL"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3">
+                            <h4 class="text-2xl font-bold text-white text-left w-[332px]">The Future of AI in Everyday Life</h4>
+                            <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Exploring how artificial intelligence is transforming our daily routines and what to
+                                expect in the next decade.</p>
+
+                            <div class="clock flex gap-x-[6px] items-center">
+                                <img src="assets/clock.png" alt="" class="w-5 h-5">
+                                <h4 class="text-green-500 font-semibold text-xl">42 min</h4>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="video max-w-[380px]">
+                        <iframe width="380" height="214" class="rounded-t-2xl"
+                            src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=spFwI8GIZSDSELVL"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3">
+                            <h4 class="text-2xl font-bold text-white text-left w-[332px]">Building Better Habits for Remote Work</h4>
+                            <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+
+                            <div class="clock flex gap-x-[6px] items-center">
+                                <img src="assets/clock.png" alt="" class="w-5 h-5">
+                                <h4 class="text-green-500 font-semibold text-xl">35 min</h4>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="video max-w-[380px]">
+                        <iframe width="380" height="214" class="rounded-t-2xl"
+                            src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=spFwI8GIZSDSELVL"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3">
+                            <h4 class="text-2xl font-bold text-white text-left w-[332px]">Career Growth in Tech: A Roadmap</h4>
+                            <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+
+                            <div class="clock flex gap-x-[6px] items-center">
+                                <img src="assets/clock.png" alt="" class="w-5 h-5">
+                                <h4 class="text-green-500 font-semibold text-xl">51 min</h4>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="meet-host max-w-300 mx-auto">
+                <h2 class="font-bold text-5xl text-white text-center mb-10">Meet The Host</h2>
+                <div class="quote">
+                    <img src="assets/host.png" alt="">
+
+                    <div>
+                        <h3>Alex Kumar</h3>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 </body>
 
