--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3">
+                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3 bg-[#250D44]">
                             <h4 class="text-2xl font-bold text-white text-left w-[332px]">The Future of AI in Everyday Life</h4>
                             <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Exploring how artificial intelligence is transforming our daily routines and what to
                                 expect in the next decade.</p>
@@ -190,7 +190,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3">
+                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3 bg-[#250D44]">
                             <h4 class="text-2xl font-bold text-white text-left w-[332px]">Building Better Habits for Remote Work</h4>
                             <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
 
@@ -209,7 +209,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3">
+                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3 bg-[#250D44]">
                             <h4 class="text-2xl font-bold text-white text-left w-[332px]">Career Growth in Tech: A Roadmap</h4>
                             <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
 
@@ -226,13 +226,28 @@
 
             <div class="meet-host max-w-300 mx-auto">
                 <h2 class="font-bold text-5xl text-white text-center mb-10">Meet The Host</h2>
-                <div class="quote">
+                <div class="quote bg-[#250D44] flex gap-6 items-center p-10 rounded-3xl">
                     <img src="assets/host.png" alt="">
 
-                    <div>
-                        <h3>Alex Kumar</h3>
-                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
-
+                    <div class="flex flex-col gap-4 justify-center">
+                        <h3 class="text-3xl text-white font-bold ">Alex Kumar</h3>
+                        <p class="text-gray-400/40 leading-[24px] text-left font-normal">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        
+                        <div class="links flex gap-2">
+                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                                <img src="assets/linkedin.png" alt="" class="w-5 h-5">
+                            </div>
+                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                                <img src="assets/x.png" alt="" class="w-5 h-5">
+                            </div>
+                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                                <img src="assets/instagram.png" alt="" class="w-5 h-5">
+                            </div>
+                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                                <img src="assets/youtube.png" alt="" class="w-5 h-5">
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
 
