--- a/index.html
+++ b/index.html
@@ -156,23 +156,23 @@
 
         </section>
 
-        <section class="feature flex flex-col gap-30" style="background-color:#1A0B2E;">
+        <section class="feature flex flex-col gap-15 sm:gap-30" style="background-color:#1A0B2E;">
 
-            <div class="episodes max-w-300 mx-auto flex flex-col gap-10 ">
-                <h2 class="font-bold text-6xl text-white text-center">Featured Episodes</h2>
+            <div class="episodes max-w-110 sm:max-w-300 mx-auto flex flex-col  gap-6 sm:gap-10 ">
+                <h2 class="font-bold  text-4xl sm:text-6xl text-white text-center">Featured Episodes</h2>
 
-                <div class="videos grid grid-cols-3 gap-8">
+                <div class="videos grid grid-cols-1 sm:grid-cols-3  gap-4 sm:gap-8">
 
-                    <div class="video max-w-[380px]">
-                        <iframe width="380" height="214" class="rounded-t-2xl"
+                    <div class="video max-w-110">
+                        <iframe width="380" height="214" class=" rounded-t-2xl"
                             src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=spFwI8GIZSDSELVL"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3 bg-[#250D44]">
-                            <h4 class="text-2xl font-bold text-white text-left w-[332px]">The Future of AI in Everyday Life</h4>
-                            <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Exploring how artificial intelligence is transforming our daily routines and what to
+                        <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-col  flex-wrap gap-3 bg-[#250D44]">
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left">The Future of AI in Everyday Life</h4>
+                            <p class="text-sm  sm:text-lg font-normal text-left text-gray-500 leading-8">Exploring how artificial intelligence is transforming our daily routines and what to
                                 expect in the next decade.</p>
 
                             <div class="clock flex gap-x-[6px] items-center">
@@ -183,16 +183,16 @@
 
                     </div>
 
-                    <div class="video max-w-[380px]">
+                    <div class="video max-w-110">
                         <iframe width="380" height="214" class="rounded-t-2xl"
                             src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=spFwI8GIZSDSELVL"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3 bg-[#250D44]">
-                            <h4 class="text-2xl font-bold text-white text-left w-[332px]">Building Better Habits for Remote Work</h4>
-                            <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                        <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-wrap flex-col gap-3 bg-[#250D44]">
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left">Building Better Habits for Remote Work</h4>
+                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
 
                             <div class="clock flex gap-x-[6px] items-center">
                                 <img src="assets/clock.png" alt="" class="w-5 h-5">
@@ -202,16 +202,16 @@
 
                     </div>
 
-                    <div class="video max-w-[380px]">
+                    <div class="video max-w-110">
                         <iframe width="380" height="214" class="rounded-t-2xl"
                             src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=spFwI8GIZSDSELVL"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                        <div class="content pt-6 px-6 pb-3 flex flex-col gap-3 bg-[#250D44]">
-                            <h4 class="text-2xl font-bold text-white text-left w-[332px]">Career Growth in Tech: A Roadmap</h4>
-                            <p class="text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                        <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-wrap flex-col gap-3 bg-[#250D44]">
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left w-[332px]">Career Growth in Tech: A Roadmap</h4>
+                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
 
                             <div class="clock flex gap-x-[6px] items-center">
                                 <img src="assets/clock.png" alt="" class="w-5 h-5">
@@ -224,13 +224,13 @@
                 </div>
             </div>
 
-            <div class="meet-host max-w-300 mx-auto">
-                <h2 class="font-bold text-5xl text-white text-center mb-10">Meet The Host</h2>
-                <div class="quote bg-[#250D44] flex gap-6 items-center p-10 rounded-3xl">
-                    <img src="assets/host.png" alt="">
+            <div class="meet-host max-w-100 sm:max-w-300 mx-auto">
+                <h2 class="font-bold  text-3xl sm:text-5xl text-white text-center mb-10">Meet The Host</h2>
+                <div class="quote bg-[#250D44] flex flex-col sm:flex-row  gap-4  sm:gap-6 items-center p-6 sm:p-10 rounded-3xl">
+                    <img src="assets/host.png" alt="" class="w-[150px] h-[150px]">
 
-                    <div class="flex flex-col gap-4 justify-center">
-                        <h3 class="text-3xl text-white font-bold ">Alex Kumar</h3>
+                    <div class="flex flex-col gap-4 justify-center items-center">
+                        <h3 class="text-xl sm:text-3xl text-white font-bold ">Alex Kumar</h3>
                         <p class="text-gray-400/40 leading-[24px] text-left font-normal">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                         
                         <div class="links flex gap-2">
