--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                         <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-col  flex-wrap gap-3 bg-[#250D44]">
-                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left">The Future of AI in Everyday Life</h4>
-                            <p class="text-sm  sm:text-lg font-normal text-left text-gray-500 leading-8">Exploring how artificial intelligence is transforming our daily routines and what to
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left">The Future of AI in Everyday
+                                Life</h4>
+                            <p class="text-sm  sm:text-lg font-normal text-left text-gray-500 leading-8">Exploring how
+                                artificial intelligence is transforming our daily routines and what to
                                 expect in the next decade.</p>
 
                             <div class="clock flex gap-x-[6px] items-center">
@@ -191,8 +193,11 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                         <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-wrap flex-col gap-3 bg-[#250D44]">
-                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left">Building Better Habits for Remote Work</h4>
-                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left">Building Better Habits for
+                                Remote Work</h4>
+                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8">Practical
+                                strategies for staying productive and maintaining work-life balance in a remote
+                                environment.</p>
 
                             <div class="clock flex gap-x-[6px] items-center">
                                 <img src="assets/clock.png" alt="" class="w-5 h-5">
@@ -210,8 +215,11 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                         <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-wrap flex-col gap-3 bg-[#250D44]">
-                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left w-[332px]">Career Growth in Tech: A Roadmap</h4>
-                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left w-[332px]">Career Growth in
+                                Tech: A Roadmap</h4>
+                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert
+                                advice on navigating your tech career from junior developer to senior leadership roles.
+                            </p>
 
                             <div class="clock flex gap-x-[6px] items-center">
                                 <img src="assets/clock.png" alt="" class="w-5 h-5">
@@ -226,27 +234,35 @@
 
             <div class="meet-host max-w-100 sm:max-w-300 mx-auto">
                 <h2 class="font-bold  text-3xl sm:text-5xl text-white text-center mb-10">Meet The Host</h2>
-                <div class="quote bg-[#250D44] flex flex-col sm:flex-row  gap-4  sm:gap-6 items-center p-6 sm:p-10 rounded-3xl">
+                <div
+                    class="quote bg-[#250D44] flex flex-col sm:flex-row  gap-4  sm:gap-6 items-center p-6 sm:p-10 rounded-3xl">
                     <img src="assets/host.png" alt="" class="w-[150px] h-[150px]">
 
-                    <div class="flex flex-col gap-4 justify-center items-center">
-                        <h3 class="text-xl sm:text-3xl text-white font-bold ">Alex Kumar</h3>
-                        <p class="text-gray-400/40 leading-[24px] text-left font-normal">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
-                        
+                    <div class="flex flex-col gap-4 justify-center">
+                        <h3 class="text-xl sm:text-3xl text-white font-bold sm:text-left">Alex Kumar</h3>
+                        <p class="text-gray-400/40 leading-[24px] text-left font-normal">Tech entrepreneur, productivity
+                            expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working
+                            with startups and Fortune 500 companies. Through TechWave, Alex shares insights from
+                            industry leaders and practical advice for anyone looking to grow in tech.</p>
+
                         <div class="links flex gap-2">
-                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                            <div
+                                class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
                                 <img src="assets/linkedin.png" alt="" class="w-5 h-5">
                             </div>
-                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                            <div
+                                class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
                                 <img src="assets/x.png" alt="" class="w-5 h-5">
                             </div>
-                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                            <div
+                                class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
                                 <img src="assets/instagram.png" alt="" class="w-5 h-5">
                             </div>
-                            <div class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
+                            <div
+                                class="dummy w-10 h-10 rounded-full border-2 border-gray-400/50 flex justify-center items-center ">
                                 <img src="assets/youtube.png" alt="" class="w-5 h-5">
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -255,6 +271,44 @@
 
         </section>
     </main>
+
+    <footer
+        class="max-w-110 h-full sm:max-w-400  mx-auto  sm:p-30  bg-[url('assets/footer-bg.png')] bg-no-repeat bg-cover bg-center">
+
+        <div class="flex flex-col gap-6 sm:gap-8 justify-center items-center w-full sm:max-w-340 mx-auto pt-10">
+            <h2 class="text-4xl sm:text-6xl font-extrabold text-white">
+                Tech<span class="bg-clip-text text-transparent bg-gradient-to-r 
+                from-[#F7E93F] via-[#FB09B4] to-[#9100F8]">Wave</span>
+            </h2>
+
+            <div class="logo flex flex-wrap justify-center items-center gap-4 max-w-65 sm:max-w-136 sm:gap-10">
+                <div class="logo-content flex justify-center items-center gap-1 ">
+                    <img src="assets/spotify.png" alt="">
+                    <h5 class="text-gray-400/50 font-medium text-lg">Spotify</h5>
+                </div>
+
+                <div class="logo-content flex justify-center items-center gap-1 ">
+                    <img src="assets/apple-podcast.png" alt="">
+                    <h5 class="text-gray-400/50 font-medium text-lg ">Apple Podcasts</h5>
+                </div>
+
+                <div class="logo-content flex justify-center items-center gap-1 ">
+                    <img src="assets/youtube-podcast.png" alt="">
+                    <h5 class="text-gray-400/50 font-medium text-lg ">YouTube</h5>
+                </div>
+
+                <div class="logo-content flex justify-center items-center gap-1 ">
+                    <img src="assets/twitter.png" alt="">
+                    <h5 class="text-gray-400/50 font-medium text-lg ">Twitter</h5>
+                </div>
+            </div>
+
+            <p class="text-gray-400/50 font-medium text-lg">&copy; 2026 TechWave Podcast. All rights reserved.</p>
+
+        </div>
+
+
+    </footer>
 </body>
 
 </html>
