--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="src/output.css">
-
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 
 </head>
 
@@ -272,7 +271,7 @@
     </main>
 
     <footer
-        class="max-w-110 h-full sm:max-w-400  mx-auto  sm:p-30  bg-[url('assets/footer-bg.png')] bg-no-repeat bg-cover bg-center">
+        class="max-w-110 h-full sm:max-w-400  mx-auto  sm:p-30">
 
         <div class="flex flex-col gap-6 sm:gap-8 justify-center items-center w-full sm:max-w-340 mx-auto pt-10">
             <h2 class="text-4xl sm:text-6xl font-extrabold text-white">
