--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         </nav>
 
-        <section class="hero">
+        <section class="hero bg-[url('/assets/hero-bg.png')] bg-center bg-cover bg-no-repeat">
             <div class="container">
                 <img src="assets/hero-circle.png" alt="" class="circle">
                 <img src="assets/microphone.png" alt="" class="mic">
@@ -271,7 +271,7 @@
     </main>
 
     <footer
-        class="max-w-110 h-full sm:max-w-400  mx-auto  sm:p-30">
+        class="max-w-110 h-full sm:max-w-400  mx-auto  sm:p-30 bg-[url('/assets/footer-bg.png')] bg-center bg-cover bg-no-repeat">
 
         <div class="flex flex-col gap-6 sm:gap-8 justify-center items-center w-full sm:max-w-340 mx-auto pt-10">
             <h2 class="text-4xl sm:text-6xl font-extrabold text-white">
