--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         </nav>
 
-        <section class="hero bg-[url('/assets/hero-bg.png')] bg-center bg-cover bg-no-repeat">
+        <section class="hero bg-[url('../assets/hero-bg.png')] bg-center bg-cover bg-no-repeat">
             <div class="container">
                 <img src="assets/hero-circle.png" alt="" class="circle">
                 <img src="assets/microphone.png" alt="" class="mic">
