Update styling and layout

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="src/output.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 
 </head>
 
 <body class="inter">
     <header>
-        <nav class="mx-auto max-w-110 flex flex-wrap justify-between py-4 px-5 text-white sm:max-w-400 sm:px-50">
+        <nav class="mx-auto  flex flex-wrap justify-between py-4  text-white max-w-400 px-50">
 
             <h2 class="text-4xl font-extrabold">
                 Tech<span class="bg-clip-text text-transparent bg-gradient-to-r 
@@ -213,9 +212,9 @@
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                         <div class="content p-4 sm:pt-6 sm:px-6 sm:pb-3 flex flex-wrap flex-col gap-3 bg-[#250D44]">
-                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left w-[332px]">Career Growth in
+                            <h4 class="text-xl sm:text-2xl font-bold text-white text-left ">Career Growth in
                                 Tech: A Roadmap</h4>
-                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8 w-[332px]">Expert
+                            <p class="text-sm sm:text-lg font-normal text-left text-gray-500 leading-8 ">Expert
                                 advice on navigating your tech career from junior developer to senior leadership roles.
                             </p>
 
