--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechWave - Your Daily Dose of Tech Insights</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="src/output.css">
 
@@ -65,7 +65,8 @@
             </div>
         </section>
 
-        </header>
+        </section>
+    </header>
 
     <main>
 
